# Absolution

./: FeatureList.md  PhaseImplementationGuide.md  ProjectOverview⁄Template.md  README.md  RedundantFeatures.md
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/: CMakeLists.txt
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/: main.cpp  server.cpp  server.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/agent/: action.h  agent.cpp  agent.h  executor.cpp  executor.h  memory.h  planner.cpp  planner.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/ast/: ast_patch_engine.cpp  ast_patch_engine.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/codebase/: call_graph.cpp  call_graph.h  codebase_index.cpp  codebase_index.h  indexer.cpp  indexer.h  project_summary.cpp  project_summary.h  reference_graph.cpp  reference_graph.h  retriever.cpp  retriever.h  symbol_index.cpp  symbol_index.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/config/: yucode_config.cpp  yucode_config.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/editing/: change_set.cpp  change_set.h  file_editor.cpp  file_editor.h  patch_engine.cpp  patch_engine.h  unified_diff.cpp  unified_diff.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/embeddings/: embedding_cache.cpp  embedding_cache.h  embedding_provider.cpp  embedding_provider.h  vector_index.cpp  vector_index.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/indexing/: file_analysis.cpp  file_analysis.h  file_analyzer.cpp  file_analyzer.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/llm/: llm_client.h  lm_studio_client.cpp  lm_studio_client.h  openai_compatible_client.cpp  openai_compatible_client.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/model_runtime/: model_runtime_manager.cpp  model_runtime_manager.h
PROJECTS-TO-LOOK-AT/YuCode-IDE-yucode-alpha/agent-runtime/src/parsing/: ast_node.h  ast_parser.h  (+6 more)
PROJECTS-TO-LOOK-AT/autoswarm-main/: .gitignore  Dockerfile.base  README.md  pyproject.toml
PROJECTS-TO-LOOK-AT/autoswarm-main/benchmark/: __init__.py  agent.py  evaluator.py  pipeline.py  pipeline_spec.yaml  pipeline_spec_base.yaml  program_pipeline.md
PROJECTS-TO-LOOK-AT/autoswarm-main/online/: __init__.py  cli.py  discovery.py  logger.py  reflector.py  server.py  skills.py
(+2975 files in other folders)
