[project]
name = "autoswarm"
version = "0.1.0"
description = "Self-improving local LLM proxy + autonomous agent benchmark harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pyyaml>=6",
    "click>=8.1",
]

[project.optional-dependencies]
benchmark = [
    "openai-agents",
    "openai",
    "harbor",
    "pandas",
    "openpyxl",
    "numpy",
]

[project.scripts]
autoswarm = "online.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["online", "benchmark"]

[tool.hatch.build.targets.sdist]
include = [
    "online",
    "benchmark",
    "README.md",
    "pyproject.toml",
]
